# mrd

./: .clang-format  .gitignore  .readthedocs.yaml  LICENSE  README.md  VERSION  display.ipynb  environment.yml  justfile
.devcontainer/: Dockerfile  devcontainer.bashrc  devcontainer.json  install-dependencies.sh
.github/: dependabot.yml
.github/actions/configure-cpp-build-environment/: action.yml
.github/actions/configure-mrd-build-environment/: action.yml
.github/workflows/: mrd_build.yml  mrd_conda.yml  mrd_cpp.yml  mrd_cpp_conda.yml  mrd_matlab.yml  mrd_pypi.yml  mrd_python_conda.yml  mrd_release.yml
cpp/: CMakeLists.txt  minimal_example.cc
cpp/cmake/: mrd-config.cmake
cpp/conda/: build.sh  conda_build_config.yaml  meta.yaml  package.sh  run_test.sh
cpp/mrd/: CMakeLists.txt  converters.cc  converters.h  ismrmrd_to_mrd.cc  mrd_hdf5_to_stream.cc  mrd_image_stream_to_png.cc  mrd_phantom.cc  mrd_stream_recon.cc  mrd_stream_to_hdf5.cc  mrd_to_ismrmrd.cc  protocols.cc  protocols.h  shepp_logan_phantom.cc  shepp_logan_phantom.h  types.cc  types.h
cpp/mrd-tools/: CMakeLists.txt  converters.cc  converters.h  fftw_wrappers.h  ismrmrd_to_mrd.cc  mrd_hdf5_to_stream.cc  mrd_image_stream_to_png.cc  mrd_phantom.cc  mrd_stream_recon.cc  mrd_stream_to_hdf5.cc  mrd_to_ismrmrd.cc  shepp_logan_phantom.cc  shepp_logan_phantom.h
cpp/mrd/binary/: protocols.cc  protocols.h
cpp/mrd/hdf5/: protocols.cc  protocols.h
cpp/mrd/ndjson/: protocols.cc  protocols.h
cpp/mrd/yardl/: yardl.h
cpp/mrd/yardl/detail/binary/: serializers.h
cpp/mrd/yardl/detail/hdf5/: ddl.h
cpp/mrd/yardl/detail/ndjson/: serializers.h
docker/: Dockerfile  build-images.sh  entrypoint.sh  test-docker-images.sh
docs/: conf.py  converter.md  cpp.md  index.md  index.rst  matlab.md  mrd_acquisition.md  mrd_header.md  mrd_image.md  mrd_waveform.md  mrd_yardl.md  overview.md  package-lock.json  python.md  requirements.txt
docs/.vitepress/: config.mts
docs/cpp/: quickstart.md
docs/matlab/: quickstart.md
docs/python/: quickstart.md
docs/reference/: format.md  model.md  tools.md
matlab/: .gitignore  buildToolbox.m  buildfile.m
matlab/tests/: MrdTest.m
matlab/toolbox/+mrd/: ADCEvent.m  AccelerationFactorType.m  Acquisition.m  AcquisitionBucket.m  AcquisitionBucketStats.m  AcquisitionData.m  AcquisitionFlags.m  AcquisitionHeader.m  AcquisitionPhase.m  AcquisitionPrototype.m  AcquisitionSystemInformationType.m  AnyImage.m  AnyNDArray.m  AnyNdArray.m  ArbitraryGradient.m  Array.m  ArrayComplexFloat.m  ArrayDimension.m  ArrayHeader.m  ArrayMeta.m  ArrayMetaValue.m  ArrayType.m  Block.m  BufferedData.m  Calibration.m  CalibrationMode.m  CoilLabelType.m  DiffusionDimension.m  DiffusionType.m  EncodingCounters.m  EncodingLimitsType.m  EncodingSpaceType.m  EncodingType.m  ExperimentalConditionsType.m  FieldOfViewMm.m  Gradient.m  GradientData.m  GradientDirection.m  GradientDirectionType.m  GradientHeader.m  (+102 more)
matlab/toolbox/+mrd/+binary/: ADCEventSerializer.m  AccelerationFactorTypeSerializer.m  AcquisitionBucketSerializer.m  AcquisitionBucketStatsSerializer.m  AcquisitionHeaderSerializer.m  AcquisitionPrototypeSerializer.m  AcquisitionSerializer.m  AcquisitionSystemInformationTypeSerializer.m  ArbitraryGradientSerializer.m  ArrayHeaderSerializer.m  BlockSerializer.m  BufferedDataSerializer.m  CoilLabelTypeSerializer.m  DiffusionTypeSerializer.m  EncodingCountersSerializer.m  EncodingLimitsTypeSerializer.m  EncodingSpaceTypeSerializer.m  EncodingTypeSerializer.m  ExperimentalConditionsTypeSerializer.m  FieldOfViewMmSerializer.m  GradientDirectionTypeSerializer.m  GradientHeaderSerializer.m  GradientSerializer.m  HeaderSerializer.m  ImageArraySerializer.m  ImageHeaderSerializer.m  ImageMetaDataSerializer.m  ImageSerializer.m  KspaceProtocolReader.m  KspaceProtocolWriter.m  KspaceSerializer.m  LimitTypeSerializer.m  MatrixSizeTypeSerializer.m  MeasurementDependencyTypeSerializer.m  MeasurementInformationTypeSerializer.m  MinMaxStatSerializer.m  MrdNoiseCovarianceReader.m  MrdNoiseCovarianceWriter.m  MrdReader.m  MrdWriter.m  (+39 more)
matlab/toolbox/examples/: demo.m  demo.sh  export_png_images.m  generate_phantom.m  minimal_example.m  stream_recon.m
matlab/toolbox/examples/+simulation/: PhantomEllipse.m  generate_birdcage_sensitivities.m  generate_shepp_logan_phantom.m
matlab/toolbox/examples/+transform/: image_to_kspace.m  kspace_to_image.m
model/: _package.yml  mrd_acquisition.yml  mrd_gradient.yml  mrd_header.yml  mrd_image.yml  mrd_intermediate.yml  mrd_protocol.yml  mrd_pulse.yml  mrd_pulseq.yml  mrd_waveform.yml
python/: .gitignore  README.md  mrd_stream_recon.py  pyproject.toml  setup.py  transform.py
python/conda/: build.sh  meta.yaml  run_test.sh
python/mrd/: __init__.py  binary.py  ndjson.py  protocols.py  types.py
python/mrd/tools/: export_png_images.py  fastmri_to_mrd.py  image_stream_to_png.py  ismrmrd_to_mrd.py  minimal_example.py  mrd_to_ismrmrd.py  mrd_to_seq.py  phantom.py  seq_to_mrd.py  simulation.py  stream_recon.py  transform.py
test/: compare_dataset.py  diff-ismrmrd-streams.py  matlab_export_png_images.sh  matlab_generate_phantom.sh  matlab_stream_recon.sh  startup.m  test-all.sh  test.sh  validate_recon.py  verify_images.py
test/test_data/pulseq/1.4.2/: example.seq  haste.seq
test/test_data/pulseq/1.5.0/: gauss_pulses.seq  sinc_pulses.seq
utils/: xsd-to-yardl.py
utils/conda/: mrd_package_all.sh  package.sh  publish_package.sh  setup-conda-build.sh
utils/pypi/: package.sh
