[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["mrd", "mrd.tools"]

[project]
name = "mrd"
version = "2.0.0a2"
dependencies = ["numpy>=1.22.0", "pillow>=9.2.0"]
requires-python = ">=3.9"
description = "Libraries and tools for working with data in the ISMRM Raw Data (ISMRMRD or MRD)."
readme = "README.md"
license = {file = "LICENSE" }
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Medical Science Apps."
]
keywords = []

[project.urls]
Homepage = "https://github.com/ismrmrd/mrd"
Documentation = "https://github.com/ismrmrd/mrd"
Repository = "https://github.com/ismrmrd/mrd"
