[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["mrd", "mrd.tools"]

[project]
name = "mrd-python"
dynamic = ["version"]
dependencies = [
    "ismrmrd>=1.14.2",
    "numpy>=1.22.0",
    "pillow>=9.2.0"
]
requires-python = ">=3.12"
description = "Library and tools for working with data in the ISMRM Raw Data (MRD) format."
readme = "README.md"
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Medical Science Apps."
]
keywords = []

[project.urls]
Homepage = "https://ismrmrd.github.io/mrd"
Documentation = "https://ismrmrd.github.io/mrd"
Repository = "https://github.com/ismrmrd/mrd"
